--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/logoUB.png
+    - assets/image/logoUB.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
