--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  syncfusion_flutter_charts: ^21.1.45
+  syncfusion_flutter_charts: ^21.1.45+2
 
 
   # The following adds the Cupertino Icons font to your application.
