--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,13 @@ environment:
   sdk: '>=3.2.1 <4.0.0'
 
 dependencies:
+  syncfusion_flutter_charts: ^24.1.41
+  fl_chart: ^0.65.0
+  http: ^1.1.2
+  shared_preferences: ^2.2.2
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
