--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter:
     sdk: flutter
   syncfusion_flutter_charts: ^21.1.45+2
+  http: ^1.1.2
+  shared_preferences: ^2.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
