--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   fl_chart: ^0.66.0
   syncfusion_flutter_charts: ^24.1.45+2
+  http: ^1.1.2
+  shared_preferences: ^2.2.2
+  firebase_auth: ^4.16.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
