--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   shared_preferences: ^2.2.2
   firebase_auth: ^4.16.0
   provider: ^6.1.1
+  cloud_firestore: ^4.14.0
 
 dev_dependencies:
   flutter_test:
